@@ -1,3 +1,9 @@
+2005-09-15  Arunprakash  <arunp@novell.com>
+
+	* camel/camel-exchange-folder.c (exchange_expunge) : Checks for
+	offline mode and returns an error.
+	** Fixes #272987.
+
 2005-09-13  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.
